# demo_ai_agent

./: README.md  pyproject.toml  requirements.txt
src/demo_agent/agent/: context_structure.py  data.py  memory.py  policy.py  runtime.py
src/demo_agent/app/: __init__.py  __main__.py  api.py  ui.py
src/demo_agent/llm/: prompts.py  provider.py
src/demo_agent/retriever/: embedder.py  loader.py  textsplit.py  vectorstore.py
src/demo_agent/tools/: __init__.py  math.py  utils.py
src/demo_agent/utils/: __init__.py  logger.py  os.py
tests/: test_app_api.py
